# cgol-app

./: .gitignore  .gitmodules  Cargo.toml
resources/: initial.state
src/: controller.rs  main.rs  view.rs
