[package]
name = "cgol-app"
version = "0.1.0"
authors = ["Nathan Mertins <nwmertins@gmail.com>"]
edition = "2018"

[dependencies]
piston = "0.42.0"
pistoncore-glutin_window = "0.54.0"
piston2d-graphics = "0.30.0"
piston2d-opengl_graphics = "0.59.0"
cgol = { git = "http://rpi01.local:3000/nmertins/cgol-rs.git", branch = "master" }